fix(all) : cookie 방식은 주석처리하고 Header 방식으로 Token 가져오도록 수정